# netzunami

./: IDEA.md  README.md  netzunami-gui.bat  netzunami.bat  pyproject.toml  requirements-ai.txt  requirements.txt  run.py  run.pyw
NeTsunami/: analyzer.py  auto_index.py  bulk.py  cli.py  config.py  connector.py  gui.py  models.py  parser.py
NeTsunami/ui/: app.py  sessions.py  terminal.py  vault.py
netzunami/: analyzer.py  bulk.py  cli.py  config.py  connector.py  embedder.py  gui.py  indexer.py  listener.py  models.py  parser.py
netzunami/ui/: app.py  findings.py  sessions.py  terminal.py  vault.py
