[project]
name = "netzunami"
version = "0.1.0"
description = "Network config analyzer with AI embeddings"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "PyMuPDF>=1.23",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
netzunami = "netzunami.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
