[project]
name = "netzunami"
version = "0.1.0"
description = "Network config analyzer with AI embeddings"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cryptography>=41.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "PyMuPDF>=1.23",
]

[project.scripts]
netzunami = "netzunami.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
